plugins {
    id 'java'
    id 'groovy'
    id 'org.springframework.boot' version '3.2.2'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'pl.luna-software.demo.microservices'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_17
}

compileJava {
    options.compilerArgs << '--enable-preview'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    agent
}

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
    maven { url 'https://repo.spring.io/snapshot' }
    tasks.register('copyOtelAgent', Copy) {

        from configurations.agent {
            rename "opentelemetry-javaagent-.*\\.jar", "opentelemetry-javaagent.jar"
        }
        into layout.buildDirectory.dir("otel-agent")
    }
}

bootJar {
    dependsOn copyOtelAgent
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.opentelemetry.instrumentation:opentelemetry-instrumentation-annotations:1.33.0'
    implementation 'org.flywaydb:flyway-core:9.22.3'
    implementation 'org.postgresql:postgresql:42.7.3'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus:1.12.0'
    annotationProcessor 'org.projectlombok:lombok'
    agent "io.opentelemetry.javaagent:opentelemetry-javaagent:1.32.0"
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.spockframework:spock-spring:2.4-M1-groovy-4.0'
    testImplementation 'com.h2database:h2:2.2.224'
    testImplementation 'org.instancio:instancio-core:3.6.0'
}

testing {
    suites {
        test {
            useJUnitJupiter()
        }
    }
}
